# schdoc-concept-py

./: Pipfile  README.md  main.py  pyproject.toml
SchdocLib/: SchdocApi.py  api_typing.py
