[tool.poetry]
name = "schdoc-concept"
version = "1.0.0"
description = "The concept of Schdoc."
authors = ["pan93412 <pan93412@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
